--- a/Frontend/Candy_Bags.html
+++ b/Frontend/Candy_Bags.html
@@ -48,6 +48,7 @@
     font-size: 29px;
   }
   </style>
+  
 </head>
 <body>
 <header>
@@ -94,199 +95,11 @@
 
   <div class="product-container">
 
-    <!-- Product Card 1 -->
-    <div class="wrapper" data-product-id="candy001" data-sold-out="false">
-      <div class="sold-out-badge">SOLD OUT</div>
-      <div class="wishlist-btn">
-        <i class="material-icons">favorite_border</i>
-      </div>
-      <div class="container">
-        <div class="top">
-          <a href="productdetails.html">
-            <img src="f1.JPG" alt="Candy Bag 1" />
-          </a>
-        </div>
-        <div class="bottom">
-          <div class="left">
-            <div class="details">
-              <h1>Orange Hand Bag</h1>
-              <p class="discounted-price">₹1450</p>
-              <p class="mrp">MRP: <span>₹2399</span></p>
-            </div>
-            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-            <div class="buy-now">BUY<br>NOW</div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-    <!-- Product Card 2 -->
-    <div class="wrapper" data-product-id="candy002" data-sold-out="false">
-      <div class="sold-out-badge">SOLD OUT</div>
-      <div class="wishlist-btn">
-        <i class="material-icons">favorite_border</i>
-      </div>
-      <div class="container">
-        <div class="top">
-          <a href="productdetails.html">
-            <img src="f2.jpg" alt="Candy Bag 2" />
-          </a>
-        </div>
-        <div class="bottom">
-          <div class="left">
-            <div class="details">
-              <h1>Tan Brown Hand Bag</h1>
-              <p class="discounted-price">₹1650</p>
-              <p class="mrp">MRP: <span>₹2399</span></p>
-            </div>
-            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-            <div class="buy-now">BUY<br>NOW</div>
-          </div>
-        </div>
-      </div>
-    </div>
-    
-        <!-- Product Card 3 -->
-    <div class="wrapper" data-product-id="candy003" data-sold-out="false">
-      <div class="sold-out-badge">SOLD OUT</div>
-      <div class="wishlist-btn">
-        <i class="material-icons">favorite_border</i>
-      </div>
-      <div class="container">
-        <div class="top">
-          <a href="productdetails.html">
-            <img src="candy.JPG" alt="Candy Bag 3" />
-          </a>
-        </div>
-        <div class="bottom">
-          <div class="left">
-            <div class="details">
-              <h1>Pink Hand Bag</h1>
-              <p class="discounted-price">₹1450</p>
-              <p class="mrp">MRP: <span>₹2399</span></p>
-            </div>
-            <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
-            <div class="buy-now">BUY<br>NOW</div>
-          </div>
-        </div>
-      </div>
-    </div>
 
   </div>
 </main>
 
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const productWrappers = document.querySelectorAll(".wrapper");
-
-  productWrappers.forEach(wrapper => {
-    const productId = wrapper.dataset.productId;
-    const productName = wrapper.querySelector(".details h1").textContent;
-    const productPrice = wrapper.querySelector(".discounted-price").textContent;
-    const productMRP = wrapper.querySelector(".mrp span")?.textContent || "";
-    const productImage = wrapper.querySelector(".top img").src;
-    const soldOutStatus = wrapper.dataset.soldOut === "true";
-
-    const product = {
-      id: productId,
-      name: productName,
-      price: productPrice,
-      mrp: productMRP,
-      image: productImage,
-      quantity: 1,
-      soldOut: soldOutStatus,
-      category: "candy-bags"
-    };
-
-    // SOLD OUT
-    const soldBadge = wrapper.querySelector(".sold-out-badge");
-    const addToCartBtn = wrapper.querySelector(".buy i");
-    const buyNowBtn = wrapper.querySelector(".buy-now");
-    if (soldOutStatus) {
-      wrapper.classList.add("sold-out");
-      if (soldBadge) soldBadge.style.display = "block";
-      if (addToCartBtn) { addToCartBtn.style.pointerEvents = "none"; addToCartBtn.style.opacity = "0.5"; }
-      if (buyNowBtn) { buyNowBtn.textContent = ""; buyNowBtn.style.background = "gray"; buyNowBtn.style.color = "white"; buyNowBtn.style.pointerEvents = "none"; }
-      wrapper.style.pointerEvents = "auto"; 
-      wrapper.querySelector(".top a").style.pointerEvents = "auto"; 
-      wrapper.querySelector(".wishlist-btn").style.pointerEvents = "auto";
-    }
-
-    // WISHLIST
-    const wishlistBtn = wrapper.querySelector(".wishlist-btn i");
-    let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
-    if (wishlist.find(p => p.id === productId)) { wishlistBtn.textContent = "favorite"; wishlistBtn.style.color = "#ff4d6d"; }
-    wishlistBtn.addEventListener("click", () => {
-      let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
-      const exists = wishlist.find(p => p.id === productId);
-      if (exists) { wishlist = wishlist.filter(p => p.id !== productId); wishlistBtn.textContent = "favorite_border"; wishlistBtn.style.color = "white"; }
-      else { wishlist.push(product); wishlistBtn.textContent = "favorite"; wishlistBtn.style.color = "#ff4d6d"; }
-      localStorage.setItem("wishlist", JSON.stringify(wishlist));
-      alert(`${productName} updated in Wishlist!`);
-    });
-
-    // ADD TO CART
-    if (addToCartBtn && !soldOutStatus) {
-      addToCartBtn.addEventListener("click", () => {
-        let cart = JSON.parse(localStorage.getItem("cart")) || [];
-        const existing = cart.find(p => p.id === productId);
-        if (existing) existing.quantity += 1;
-        else cart.push({ ...product });
-        localStorage.setItem("cart", JSON.stringify(cart));
-        alert(`${productName} added to Cart 🛒`);
-      });
-    }
-
-    // BUY NOW
-    if (buyNowBtn && !soldOutStatus) {
-      buyNowBtn.addEventListener("click", () => {
-        let cart = JSON.parse(localStorage.getItem("cart")) || [];
-        const existing = cart.find(p => p.id === productId);
-        if (!existing) cart.push({ ...product });
-        localStorage.setItem("cart", JSON.stringify(cart));
-        window.location.href = "cart.html";
-      });
-    }
-
-    // LINK TO DETAILS
-    wrapper.querySelector(".top a").addEventListener("click", e => {
-      e.preventDefault();
-      localStorage.setItem("selectedProduct", JSON.stringify(product));
-      window.location.href = "productdetails.html";
-    });
-
-  });
-
-  // GRID VIEW TOGGLE
-  const container = document.querySelector(".product-container");
-  const viewBtns = document.querySelectorAll(".view-toggle .view-btn");
-  if (window.innerWidth >= 769) { container.classList.add("view-2"); container.classList.remove("view-1","view-4"); }
-  viewBtns.forEach(btn => btn.addEventListener("click", () => {
-    const columns = btn.dataset.columns;
-    container.classList.remove("view-1","view-2","view-4");
-    container.classList.add(`view-${columns}`);
-  }));
-
-  // PUSH TO ALL PRODUCTS FOR DYNAMIC PAGE
-  let allProducts = JSON.parse(localStorage.getItem("allProducts")) || [];
-  productWrappers.forEach(wrapper => {
-    const productId = wrapper.dataset.productId;
-    if (!allProducts.find(p => p.id === productId)) {
-      allProducts.push({
-        id: productId,
-        name: wrapper.querySelector(".details h1").textContent,
-        price: wrapper.querySelector(".discounted-price").textContent,
-        mrp: wrapper.querySelector(".mrp span")?.textContent || "",
-        image: wrapper.querySelector(".top img").src,
-        soldOut: wrapper.dataset.soldOut === "true",
-        category: "candy-bags"
-      });
-    }
-  });
-  localStorage.setItem("allProducts", JSON.stringify(allProducts));
-
-});
-</script>
 <script>
 window.addEventListener("scroll", function() {
   const text = document.getElementById("bannerText");
@@ -302,6 +115,181 @@ window.addEventListener("scroll", function() {
 <footer class="site-footer">
   <p>© 2025 V Lady. All rights reserved.</p>
 </footer>
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+  import { getFirestore, collection, getDocs } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-firestore.js";
 
+  // ✅ Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyB_8hb_E4zqF9sbv8sSx31ZcLXGC5SvSAM",
+    authDomain: "studio-1046644394-281ce.firebaseapp.com",
+    projectId: "studio-1046644394-281ce",
+    storageBucket: "studio-1046644394-281ce.firebasestorage.app",
+    messagingSenderId: "722558821135",
+    appId: "1:722558821135:web:e67939ec381bf1922b547a"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+
+  async function loadCandyBags() {
+    const container = document.querySelector(".product-container");
+    container.innerHTML = "<p>Loading products...</p>";
+
+    try {
+      // ✅ Firestore path: Vlady → CandyBags → Products
+      const productsRef = collection(db, "Vlady", "CandyBags", "Products");
+      const snapshot = await getDocs(productsRef);
+
+      container.innerHTML = "";
+
+      if (snapshot.empty) {
+        container.innerHTML = "<p>No products found.</p>";
+        return;
+      }
+
+      snapshot.forEach(doc => {
+        const data = doc.data();
+
+        // Handle possible spacing in field names
+        const name = data["Name "] || data["Name"] || "Unnamed Product";
+        const price = data["Price "] || data["Price"] || 0;
+        const mrp = data["MRP "] || data["MRP"] || "";
+        const description = data["Description "] || data["Description"] || "";
+        const images = data["Images "] || data["Images"] || [];
+
+        // ✅ Load first image properly from local files
+        let imageUrl = "placeholder.jpg";
+        if (Array.isArray(images) && images.length > 0) {
+          imageUrl = `./${images[0]}`;
+        }
+
+        // ✅ Create product card (same design)
+        const card = document.createElement("div");
+        card.classList.add("wrapper");
+        card.innerHTML = `
+          <div class="container">
+            <div class="top">
+              <a href="#"><img src="${imageUrl}" alt="${name}" /></a>
+              <div class="wishlist-btn"><i class="fa-regular fa-heart"></i></div>
+            </div>
+            <div class="bottom">
+              <div class="left">
+                <div class="details">
+                  <h1>${name}</h1>
+                  <p>₹${price}</p>
+                  <p class="mrp">MRP: ₹${mrp}</p>
+                </div>
+                <div class="buy"><i class="material-icons">add_shopping_cart</i></div>
+                <div class="buy-now">BUY<br> NOW</div>
+              </div>
+            </div>
+          </div>
+        `;
+        // ✅ Add wishlist, cart, and buy-now functionality
+const productData = {
+  id: doc.id,
+  name,
+  price,
+  mrp,
+  description,
+  images,
+  image: imageUrl,
+  category: "candy-bags",
+  quantity: 1
+};
+
+// --- WISHLIST ---
+const wishlistBtn = card.querySelector(".wishlist-btn i");
+
+wishlistBtn.addEventListener("click", () => {
+  let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
+  const exists = wishlist.find(p => p.id === productData.id);
+
+  if (exists) {
+    wishlist = wishlist.filter(p => p.id !== productData.id);
+    wishlistBtn.classList.remove("fa-solid");
+    wishlistBtn.classList.add("fa-regular");
+    wishlistBtn.style.color = "white";
+  } else {
+    wishlist.push(productData);
+    wishlistBtn.classList.remove("fa-regular");
+    wishlistBtn.classList.add("fa-solid");
+    wishlistBtn.style.color = "#ff4d6d";
+  }
+
+  localStorage.setItem("wishlist", JSON.stringify(wishlist));
+  alert(`${productData.name} updated in Wishlist ❤️`);
+});
+
+// --- ADD TO CART ---
+const addToCartBtn = card.querySelector(".buy i");
+addToCartBtn.addEventListener("click", () => {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const existing = cart.find(p => p.id === productData.id);
+  if (existing) existing.quantity += 1;
+  else cart.push(productData);
+  localStorage.setItem("cart", JSON.stringify(cart));
+  alert(`${productData.name} added to Cart 🛒`);
+});
+
+// --- BUY NOW ---
+const buyNowBtn = card.querySelector(".buy-now");
+buyNowBtn.addEventListener("click", () => {
+  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+  const existing = cart.find(p => p.id === productData.id);
+  if (!existing) cart.push(productData);
+  localStorage.setItem("cart", JSON.stringify(cart));
+  window.location.href = "cart.html";
+});
+
+        // ✅ Send product data to productdetails.html
+        card.querySelector(".top a").addEventListener("click", e => {
+          e.preventDefault();
+
+          const productData = {
+            id: doc.id,
+            name: name,
+            price: price,
+            mrp: mrp,
+            description: description,
+            images: images,
+            image: imageUrl
+          };
+
+          localStorage.setItem("selectedProduct", JSON.stringify(productData));
+          window.location.href = "productdetails.html";
+        });
+
+        container.appendChild(card);
+      });
+
+      console.log("✅ Products loaded and clickable for details page!");
+      
+      // ✅ Reattach view toggle buttons after products are loaded
+const viewBtns = document.querySelectorAll(".view-toggle .view-btn");
+const productContainer = document.querySelector(".product-container");
+
+if (window.innerWidth >= 769) {
+  productContainer.classList.add("view-2");
+  productContainer.classList.remove("view-1", "view-4");
+}
+
+viewBtns.forEach(btn => {
+  btn.addEventListener("click", () => {
+    const columns = btn.dataset.columns;
+    productContainer.classList.remove("view-1", "view-2", "view-4");
+    productContainer.classList.add(`view-${columns}`);
+  });
+});
+    } catch (error) {
+      console.error("❌ Error fetching products:", error);
+      container.innerHTML = `<p style="color:red;">Error loading products: ${error.message}</p>`;
+    }
+  }
+
+  document.addEventListener("DOMContentLoaded", loadCandyBags);
+
+</script>
 </body>
 </html>
