--- a/Frontend/wishlist.html
+++ b/Frontend/wishlist.html
@@ -184,8 +184,8 @@ document.addEventListener("DOMContentLoaded", () => {
             <div class="details">
               <h1>${product.name}</h1>
               <p>
-                <span class="discounted-price">${product.price}</span><br>
-              <p> <span class="mrp">MRP: ${product.mrp}</span></p>
+                <span class="discounted-price">₹${product.price}</span><br>
+              <p> <span class="mrp">MRP: ₹${product.mrp}</span></p>
               </p>
             </div>
             <div class="buy">
