--- a/Frontend/productdetails.html
+++ b/Frontend/productdetails.html
@@ -22,10 +22,7 @@
       </ul>
     </nav>
   </header>
-
-  <div class="pink-banner">
-    <div class="scrolling-text">THE LADY WHO LEADS</div>
-  </div>
+<div id="bannerText">THE LADY WHO LEADS</div>
 
   <div class="product-page">
     <div class="gallery">
@@ -51,7 +48,6 @@
       <p class="description"></p>
 
       <div class="extra-description" id="extra-desc">
-        Discover the perfect fusion of sophistication and practicality with our V LADY handbag.
       </div>
 
       <div class="btn-group">
@@ -64,99 +60,99 @@
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const product = JSON.parse(localStorage.getItem("selectedProduct"));
-  if (!product) { 
-    // Redirect if no product is found
-    window.location.href = "All_Handbags.html"; 
-    return; 
+  if (!product) {
+    window.location.href = "candybags.html";
+    return;
   }
 
-  // ===== POPULATE PRODUCT DETAILS =====
-  document.querySelector(".product-title").textContent = product.name;
-  document.querySelector(".price").textContent = `₹${product.price}`;
-  document.querySelector("#mrp-text").textContent = product.MRP ? `MRP: ₹${product.MRP}` : "";
-  document.querySelector(".description").textContent = product.description || "No description available.";
+  // ===== SET PRODUCT DETAILS =====
+  document.querySelector(".product-title").textContent = product.name || "Unnamed Product";
+  document.querySelector(".price").textContent =
+    product.price?.toString().includes("₹") ? product.price : "₹" + product.price;
+  document.querySelector("#mrp-text").textContent = product.mrp ? "MRP: ₹" + product.mrp : "";
 
+  // ✅ Put description in extra section
+  const descElement = document.querySelector(".extra-description");
+  descElement.textContent = product.description || "No description available.";
+
+  // ===== HANDLE IMAGES =====
   const mainImg = document.getElementById("main-img");
   const thumbsContainer = document.getElementById("thumbnails");
-  thumbsContainer.innerHTML = ""; // Clear any manual thumbnails
+  thumbsContainer.innerHTML = "";
 
-  // ===== BUILD IMAGE GALLERY =====
-  if (product.images && product.images.length > 0) {
-    // Set the main image to the first image in the array
-    mainImg.src = product.images[0];
+  let allImages = [];
 
-    // Create a thumbnail for each image
-    product.images.forEach((imageUrl, index) => {
-      const thumb = document.createElement("img");
-      thumb.src = imageUrl;
-      thumb.classList.add("thumbnail");
-      if (index === 0) {
-        thumb.classList.add("active");
-      }
+  // 1️⃣ Add product.image (main one)
+  if (product.image) allImages.push(product.image);
 
-      // Add click event to change main image
-      thumb.addEventListener("click", () => {
-        mainImg.src = imageUrl;
-        // Update active state
-        document.querySelector(".thumbnail.active")?.classList.remove("active");
-        thumb.classList.add("active");
-      });
-
-      thumbsContainer.appendChild(thumb);
+  // 2️⃣ Add other images (but skip duplicates)
+  if (Array.isArray(product.images)) {
+    product.images.forEach(img => {
+      if (!allImages.includes(img)) allImages.push(img);
     });
-  } else {
-    // Fallback if no images are available
-    mainImg.src = 'placeholder.jpg';
   }
 
-  // ===== WISHLIST FUNCTIONALITY =====
+  // If no images found
+  if (allImages.length === 0) {
+    allImages.push("placeholder.jpg");
+  }
+
+  // 3️⃣ Show first image as main
+  mainImg.src = allImages[0];
+
+  // 4️⃣ Create thumbnails dynamically (skip the first one)
+  allImages.slice(1).forEach(src => {
+    const thumb = document.createElement("img");
+    thumb.src = src;
+    thumb.classList.add("thumbnail");
+    thumb.addEventListener("click", () => {
+      document.querySelector(".thumbnail.active")?.classList.remove("active");
+      thumb.classList.add("active");
+      mainImg.src = src;
+    });
+    thumbsContainer.appendChild(thumb);
+  });
+
+  // ===== WISHLIST LOGIC =====
   const wishlistBtn = document.getElementById("wishlist-btn");
   let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
-  const productId = product._id || `seed_${product.name.replace(/\s/g, '_')}`;
-
-  if (wishlist.find(p => p.id === productId)) {
-      wishlistBtn.classList.replace("fa-regular", "fa-solid");
-  }
+  if (wishlist.find(p => p.id === product.id)) wishlistBtn.classList.replace("fa-regular", "fa-solid");
 
   wishlistBtn.addEventListener("click", () => {
     let wishlist = JSON.parse(localStorage.getItem("wishlist")) || [];
-    const exists = wishlist.find(p => p.id === productId);
+    const exists = wishlist.find(p => p.id === product.id);
     if (exists) {
-      wishlist = wishlist.filter(p => p.id !== productId);
+      wishlist = wishlist.filter(p => p.id !== product.id);
       wishlistBtn.classList.replace("fa-solid", "fa-regular");
     } else {
-      wishlist.push({ ...product, id: productId });
+      wishlist.push(product);
       wishlistBtn.classList.replace("fa-regular", "fa-solid");
     }
     localStorage.setItem("wishlist", JSON.stringify(wishlist));
   });
 
-  // ===== ADD TO CART & BUY NOW FUNCTIONALITY =====
-  const addCartBtn = document.querySelector(".add-cart");
-  const buyNowBtn = document.querySelector(".buy-now");
+  // ===== ADD TO CART & BUY NOW =====
+  const addCart = document.querySelector(".add-cart");
+  const buyNow = document.querySelector(".buy-now");
 
-  addCartBtn.addEventListener("click", () => {
+  addCart.addEventListener("click", () => {
     let cart = JSON.parse(localStorage.getItem("cart")) || [];
-    const existing = cart.find(p => p.id === productId);
-    if (existing) {
-      existing.quantity += 1;
-    } else {
-      cart.push({ ...product, id: productId, quantity: 1 });
-    }
+    const existing = cart.find(p => p.id === product.id);
+    if (existing) existing.quantity += 1;
+    else cart.push({ ...product, quantity: 1 });
     localStorage.setItem("cart", JSON.stringify(cart));
     alert(`${product.name} added to Cart 🛒`);
   });
 
-  buyNowBtn.addEventListener("click", () => {
+  buyNow.addEventListener("click", () => {
     let cart = JSON.parse(localStorage.getItem("cart")) || [];
-    const existing = cart.find(p => p.id === productId);
-    if (!existing) {
-      cart.push({ ...product, id: productId, quantity: 1 });
-    }
+    const existing = cart.find(p => p.id === product.id);
+    if (!existing) cart.push({ ...product, quantity: 1 });
     localStorage.setItem("cart", JSON.stringify(cart));
     window.location.href = "cart.html";
   });
 });
 </script>
+
 </body>
 </html>
