--- a/Frontend/cart.html
+++ b/Frontend/cart.html
@@ -63,132 +63,179 @@
   </div>
 </section>
 
-<script>
-document.addEventListener("DOMContentLoaded", () => {
-  const cartContainer = document.querySelector(".cart-section");
-  const cartItemsDiv = cartContainer.querySelector(".cart-items");
-  const totalSpan = document.getElementById("cart-total");
-  const payBtn = document.querySelector(".pay-btn");
-  let cart = JSON.parse(localStorage.getItem("cart")) || [];
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-app.js";
+  import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.4.0/firebase-firestore.js";
 
-  let discountApplied = false;
+  const firebaseConfig = {
+    apiKey: "AIzaSyB_8hb_E4zqF9sbv8sSx31ZcLXGC5SvSAM",
+    authDomain: "studio-1046644394-281ce.firebaseapp.com",
+    projectId: "studio-1046644394-281ce",
+    storageBucket: "studio-1046644394-281ce.firebasestorage.app",
+    messagingSenderId: "722558821135",
+    appId: "1:722558821135:web:e67939ec381bf1922b547a"
+  };
 
-  // Render cart items
-  function renderCart() {
-    cartItemsDiv.innerHTML = "";
-    if (cart.length === 0) {
-      cartContainer.innerHTML = "<p>Your cart is empty 🛒</p>";
-      return;
-    }
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
 
-    cart.forEach(product => {
-      const itemDiv = document.createElement("div");
-      itemDiv.classList.add("cart-item");
-      itemDiv.dataset.productId = product.id;
+  document.addEventListener("DOMContentLoaded", () => {
+    const cartContainer = document.querySelector(".cart-section");
+    const cartItemsDiv = cartContainer.querySelector(".cart-items");
+    const totalSpan = document.getElementById("cart-total");
+    const payBtn = document.querySelector(".pay-btn");
+    let cart = JSON.parse(localStorage.getItem("cart")) || [];
 
-      itemDiv.innerHTML = `
-        <img src="${product.image}" alt="${product.name}" />
-        <div class="item-details">
-          <h3>${product.name}</h3>
-          <p class="price">₹${product.price}/-</p>
-        </div>
-        <div class="item-controls">
-          <button class="qty-btn minus">−</button>
-          <span class="quantity">${product.quantity || 1}</span>
-          <button class="qty-btn plus">+</button>
-          <button class="delete-btn">🗑</button>
-        </div>
-      `;
+    let discountApplied = false;
 
-      const qtySpan = itemDiv.querySelector(".quantity");
+    // Render cart items
+    function renderCart() {
+      cartItemsDiv.innerHTML = "";
+      if (cart.length === 0) {
+        cartContainer.innerHTML = "<p>Your cart is empty 🛒</p>";
+        return;
+      }
 
-      // Minus button
-      itemDiv.querySelector(".minus").addEventListener("click", () => {
-        if (product.quantity > 1) {
-          product.quantity--;
+      cart.forEach(product => {
+        const itemDiv = document.createElement("div");
+        itemDiv.classList.add("cart-item");
+        itemDiv.dataset.productId = product.id;
+
+        itemDiv.innerHTML = `
+          <img src="${product.image}" alt="${product.name}" />
+          <div class="item-details">
+            <h3>${product.name}</h3>
+            <p class="price">₹${product.price}/-</p>
+          </div>
+          <div class="item-controls">
+            <button class="qty-btn minus">−</button>
+            <span class="quantity">${product.quantity || 1}</span>
+            <button class="qty-btn plus">+</button>
+            <button class="delete-btn">🗑</button>
+          </div>
+        `;
+
+        const qtySpan = itemDiv.querySelector(".quantity");
+
+        // Minus button
+        itemDiv.querySelector(".minus").addEventListener("click", () => {
+          if (product.quantity > 1) {
+            product.quantity--;
+            qtySpan.textContent = product.quantity;
+            localStorage.setItem("cart", JSON.stringify(cart));
+            updateTotal();
+          }
+        });
+
+        // Plus button
+        itemDiv.querySelector(".plus").addEventListener("click", () => {
+          product.quantity++;
           qtySpan.textContent = product.quantity;
           localStorage.setItem("cart", JSON.stringify(cart));
           updateTotal();
+        });
+
+        // Delete button
+        itemDiv.querySelector(".delete-btn").addEventListener("click", () => {
+          cart = cart.filter(p => p.id !== product.id);
+          localStorage.setItem("cart", JSON.stringify(cart));
+          renderCart();
+        });
+
+        cartItemsDiv.appendChild(itemDiv);
+      });
+
+      updateTotal();
+    }
+
+    // Total calculation (✅ Fixed)
+    function updateTotal() {
+      let total = 0;
+      cart.forEach(product => {
+        const priceNum = parseFloat(
+          typeof product.price === "string"
+            ? product.price.replace(/[^\d.]/g, "")
+            : product.price
+        );
+        const qty = product.quantity || 1;
+        total += priceNum * qty;
+      });
+
+      if (discountApplied) total = Math.round(total / 2);
+      totalSpan.textContent = `₹${total}`;
+    }
+
+    // ===== Coupon Code =====
+    const couponInput = document.getElementById("coupon-code");
+    const applyBtn = document.getElementById("apply-coupon");
+
+    applyBtn.addEventListener("click", () => {
+      const code = couponInput.value;
+      if (code === "WELCOME50") {
+        if (!discountApplied) {
+          discountApplied = true;
+          updateTotal();
+          alert("🎉 Congratulations! You have applied 50% discount successfully!");
+        } else {
+          alert("Coupon already applied!");
         }
-      });
-
-      // Plus button
-      itemDiv.querySelector(".plus").addEventListener("click", () => {
-        product.quantity++;
-        qtySpan.textContent = product.quantity;
-        localStorage.setItem("cart", JSON.stringify(cart));
-        updateTotal();
-      });
-
-      // Delete button
-      itemDiv.querySelector(".delete-btn").addEventListener("click", () => {
-        cart = cart.filter(p => p.id !== product.id);
-        localStorage.setItem("cart", JSON.stringify(cart));
-        renderCart();
-      });
-
-      cartItemsDiv.appendChild(itemDiv);
-    });
-
-    updateTotal();
-  }
-
-  // Total calculation
-  function updateTotal() {
-    let total = 0;
-    cart.forEach(product => {
-      const priceNum = parseInt(product.price.replace('₹',''));
-      const qty = product.quantity || 1;
-      total += priceNum * qty;
-    });
-
-    if(discountApplied) total = Math.round(total / 2);
-    totalSpan.textContent = `₹${total}`;
-  }
-
-  // ===== Coupon Code =====
-  const couponInput = document.getElementById("coupon-code");
-  const applyBtn = document.getElementById("apply-coupon");
-
-  applyBtn.addEventListener("click", () => {
-    const code = couponInput.value;
-    if(code === "WELCOME50") {
-      if(!discountApplied){
-        discountApplied = true;
-        updateTotal();
-        alert("🎉 Congratulations! You have applied 50% discount successfully!");
       } else {
-        alert("Coupon already applied!");
+        alert("❌ Incorrect code applied. Please Try Again.");
       }
-    } else {
-      alert("❌ Incorrect code applied. Please Try Again.");
-    }
+    });
+
+    // ===== Pay Now Button =====
+    payBtn.addEventListener("click", async () => {
+      const name = document.getElementById("name").value.trim();
+      const phone = document.getElementById("phone").value.trim();
+      const house = document.getElementById("house").value.trim();
+      const locality = document.getElementById("locality").value.trim();
+      const city = document.getElementById("city").value.trim();
+      const pincode = document.getElementById("pincode").value.trim();
+
+      if (!name || !phone || !house || !locality || !city || !pincode) {
+        alert("❌ Please fill in all required address details before proceeding!");
+        return;
+      }
+
+      if (cart.length === 0) {
+        alert("Cart is empty!");
+        return;
+      }
+
+      const totalAmount = parseFloat(totalSpan.textContent.replace(/[^\d.]/g, ""));
+
+      const customerInfo = {
+        name,
+        phone,
+        address: `${house}, ${locality}, ${city} - ${pincode}`,
+        total: totalAmount,
+        paymentMethod: "Cash on Delivery",
+      };
+
+      try {
+        await addDoc(collection(db, "orders"), {
+          customerName: customerInfo.name,
+          customerPhone: customerInfo.phone,
+          address: customerInfo.address,
+          totalAmount: customerInfo.total,
+          paymentMethod: customerInfo.paymentMethod,
+          items: cart,
+          status: "Pending",
+          createdAt: serverTimestamp(),
+        });
+
+        alert("✅ Order placed successfully!");
+        localStorage.removeItem("cart");
+        window.location.href = "mainpage.html";
+      } catch (e) {
+        console.error("Error placing order: ", e);
+        alert("❌ Error placing order. Please try again!");
+      }
+    });
+
+    renderCart();
   });
-
-  // ===== Pay Now Button Validation =====
-  payBtn.addEventListener("click", () => {
-    const name = document.getElementById("name").value.trim();
-    const phone = document.getElementById("phone").value.trim();
-    const house = document.getElementById("house").value.trim();
-    const locality = document.getElementById("locality").value.trim();
-    const city = document.getElementById("city").value.trim();
-    const pincode = document.getElementById("pincode").value.trim();
-
-    if(!name || !phone || !house || !locality || !city || !pincode){
-      alert("❌ Please fill in all required address details before proceeding!");
-      return;
-    }
-
-    if(cart.length === 0){
-      alert("Cart is empty!");
-      return;
-    }
-
-    alert("✅ Address verified! Proceeding to payment...");
-  });
-
-  renderCart();
-});
 </script>
 <script>
 window.addEventListener("scroll", function() {
